[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://images/player2/player20000.png" type="Texture" id=2]
[ext_resource path="res://images/player2/player20001.png" type="Texture" id=3]
[ext_resource path="res://images/player2/player20002.png" type="Texture" id=4]
[ext_resource path="res://images/player2_idle/player2_idle0000.png" type="Texture" id=5]
[ext_resource path="res://images/player2_idle/player2_idle0001.png" type="Texture" id=6]
[ext_resource path="res://images/player_spawn/player_spawn0000.png" type="Texture" id=7]
[ext_resource path="res://images/player_spawn/player_spawn0001.png" type="Texture" id=8]
[ext_resource path="res://images/player_spawn/player_spawn0002.png" type="Texture" id=9]
[ext_resource path="res://images/player2_vert/player2_vert0000.png" type="Texture" id=10]
[ext_resource path="res://images/player2_vert/player2_vert0001.png" type="Texture" id=11]
[ext_resource path="res://images/player_vert/player2_vert0000.png" type="Texture" id=12]
[ext_resource path="res://images/player_vert/player2_vert0001.png" type="Texture" id=13]
[ext_resource path="res://images/player2_shoot/player2_shoot0000.png" type="Texture" id=14]
[ext_resource path="res://images/player2_shoot/player2_shoot0001.png" type="Texture" id=15]
[ext_resource path="res://images/gradient.png" type="Texture" id=16]
[ext_resource path="res://sounds/running.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/player_spawn.wav" type="AudioStream" id=18]
[ext_resource path="res://sounds/player_died.wav" type="AudioStream" id=19]
[ext_resource path="res://sounds/shoot.wav" type="AudioStream" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 14 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "right",
"speed": 15.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "spawn",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "death",
"speed": 15.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "vert",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 60.0
gravity = Vector3( -40, -20, 0 )
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
linear_accel_random = 1.0
angle = 45.0
angle_random = 1.0
scale = 5.5
scale_random = 1.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="Player" type="KinematicBody2D"]
z_index = 100
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, 18 )
rotation = -0.000745949
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 12, 16 )
frames = SubResource( 2 )
animation = "shoot"
frame = 1
playing = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 16 )
offset = Vector2( 18, 16 )
texture_scale = 0.8
color = Color( 0.976471, 0.976471, 0.972549, 1 )
range_height = 6.6
shadow_enabled = true
shadow_gradient_length = 5.0

[node name="RunPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -23.691

[node name="SpawnPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="DeathPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="DustEffect" type="Particles2D" parent="."]
position = Vector2( 6, 32 )
emitting = false
amount = 5
lifetime = 0.75
one_shot = true
explosiveness = 0.05
process_material = SubResource( 3 )
